@@ -3,6 +3,7 @@
 	new feature: CodePress editor enables line numbers and syntax
 		highlightling for RackCode editing
 	new feature: one more input format for RS manager
+	new feature: standalone RackCode report with warnings
 	bugfix: tags are now properly displayed for users
 	bugfix: the JavaScript error isn't generated any more (fix by Aaron)
 	bugfix: tag tree is now always correctly sorted
